batch 17d-4: King is lua data
King.java (184 lines) deleted; kind string unchanged (Chess.lua and
AlchemyRecipes keep matching). The owed 'getCloser numeric target-
replace' debt dissolved: retarget-in-getCloser rejected as a movement-
mechanics patch faking a goal; instead King's pedestal walk + summon
live in a dedicated scripted AI state - CustomMobAi runs
scripts/ai/KingPedestal.lua via MobAi.getStateByTag fallback (same-turn
state handoff via Mob.act's capped re-dispatch loop).

King.lua: spawn (SkeletonKey+ArmorKit, getItem guards), act (pedestal
scan + flip into KingPedestal, HUNTING/WANDERING-gated so a sleeping
king stays put), die (BOSS_SLAIN_4 + King_Info1), notice (King_Info3).
KingPedestal.lua: melee-first, summon-at-pedestal (Speck.SCREAM +
snd_challenge; Undead or raised Monk/Warlock/Golem/Senior - setUndead,
exp 0, Hunting, green tint + black Flare), else doStepTo; exits to
Hunting when the cap is full. lastPedestal/targetPedestal live in
cross-script restoreData (serpent; @Packable replaced).

Army cap reproduces the java integer-division quirk verbatim:
(ht-hp)/ht is always 0, so maxArmySize==1 - one servant at a time,
raised at a fresh pedestal after each death. Flagged in the doc.

New @LuaInterface: CustomMobAi.getTag, CustomMob.doAttack,
Char.isUndead (new)/setUndead, CharSprite.centerEmitter, Visual.tint,
Level.getEmptyCellNextTo.

Verified headless (--add-opens java.base/java.util needed for lua
pairs over collections): allMobs 126/0 DummyMob; stat parity vs
NeutralKing; sleep->damage->Wandering->KingPedestal walk->summon
(undead=true exp=0) -> cap-full exit; servant kill -> second pedestal
(last 496->144); battleMusic consumed; save/reload round-trip exact
(pos, last/target, undead flag); die = BOSS_SLAIN_4 badge + ArmorKit
heap. SkeletonKey stays in the Keyring on death - pre-existing java
behavior (Belongings iteration skips bags), flagged, parity kept.
CI: alchemy 43/43, blood/level_nav/doctor/all_spells green,
pet_transition 5/5, turn_ec